#578 fixed small gap where rollover was not applied, also added yellow primary up to arrow

--- a/crt_portal/static/sass/custom/landing.scss
+++ b/crt_portal/static/sass/custom/landing.scss
@@ -336,6 +336,7 @@ $arrow-height: 24px;
       background-repeat: no-repeat !important;
       background-position: right 1.5rem center !important;
       background-size: 1.5rem !important;
+      background-color: color($theme-color-primary-darker);
       width: 100%;
       height: 100%;
       &[aria-expanded='false'] {
@@ -346,6 +347,9 @@ $arrow-height: 24px;
       }
       &[aria-expanded='true'] {
         background-image: url(../../img/angle-arrow-up-white.svg) !important;
+        &:hover {
+          background-image: url(../../img/angle-arrow-up-primary.svg) !important;
+        }
       }
 
       &:hover {
